// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShuttlePicker renders 1`] = `
<div
  className="m-shuttle-picker-container visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      data-testid="drawer-tab-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-route-picker"
  >
    <div
      className="m-route-picker__label"
    >
      Run #
    </div>
    <ul
      className="m-route-picker__route-list m-route-picker__shuttle-run-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            All Specials (999*)
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          >
            4
          </span>
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            Special 999 555
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Blue 999 501
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Green 999 502
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Orange 999 503
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Red 999 504
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            CR 999 505
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--unselected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            999 511
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            999 512
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          >
            1
          </span>
        </button>
      </li>
    </ul>
    <div
      className="m-route-picker__label"
    >
      Routes
    </div>
    <ul
      className="m-route-picker__route-list m-route-picker__shuttle-route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Blue Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Orange Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Red Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line Shuttle
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line B Shuttle
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Haverhill Line Shuttle
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ShuttlePicker renders loaded state with no shuttles 1`] = `
<div
  className="m-shuttle-picker-container visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      data-testid="drawer-tab-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-route-picker"
  >
    <div
      className="m-route-picker__label"
    >
      Run #
    </div>
    <ul
      className="m-route-picker__route-list m-route-picker__shuttle-run-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--selected"
          disabled={false}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            All Specials (999*)
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            Special 999 555
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Blue 999 501
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Green 999 502
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Orange 999 503
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            Red 999 504
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--with-count m-route-picker__route-list-button--disabled"
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="m-route-picker__route-list-button-name"
          >
            <span
              className=""
              dangerouslySetInnerHTML={
                Object {
                  "__html": "SVG",
                }
              }
            />
            CR 999 505
          </span>
          <span
            className="m-route-picker__route-list-button-count"
          />
        </button>
      </li>
    </ul>
    <div
      className="m-route-picker__label"
    >
      Routes
    </div>
    <ul
      className="m-route-picker__route-list m-route-picker__shuttle-route-list"
    >
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Blue Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Orange Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Red Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Mattapan Line Shuttle
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Green Line B Shuttle
        </button>
      </li>
      <li>
        <button
          className="m-route-picker__route-list-button m-route-picker__route-list-button--unselected"
          onClick={[Function]}
        >
          Haverhill Line Shuttle
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ShuttlePicker renders loading state 1`] = `
<div
  className="m-shuttle-picker-container visible"
  data-testid="shuttle-picker-container"
>
  <div
    className="c-drawer-tab"
  >
    <button
      className="c-drawer-tab__tab-button"
      data-testid="drawer-tab-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-route-picker"
  >
    loading...
  </div>
</div>
`;
